# CovertHelper

./: LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
Software/CommandLineTool/: pyproject.toml
Software/CommandLineTool/src/CovertHelp/: ConfigManager.py  Connect.py  HealthCheck.py  __init__.py  cli.py  config.json
Software/CommandLineTool/src/CovertHelp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Software/CommandLineTool/src/PAChelp/: Connect.py  __init__.py  cli.py  config.json
Software/CovertHelpLite/: PAChelpLite.py  config.json
Software/PAChelpLite/: PAChelpLite.py  config.json
Testing Zone/: config.json
